Update CI configuration to include PYTHONPATH for improved test execution

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,4 +75,5 @@ jobs:
         # adapte si tes tests sont à la racine
         working-directory: src
         run: |
+          export PYTHONPATH="${PYTHONPATH}:$(pwd)"
           pytest -q
