--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,9 +17,14 @@ jobs:
 
       - name: Install ssh/rsync tools
         run: |
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends sshpass rsync openssh-client
-          ssh-keyscan -H "${{ secrets.VM_HOST }}" >> ~/.ssh/known_hosts
+            sudo apt-get update
+            sudo apt-get install -y --no-install-recommends sshpass rsync openssh-client
+            # ✅ Créer le répertoire ~/.ssh avant d’écrire known_hosts
+            mkdir -p ~/.ssh
+            chmod 700 ~/.ssh
+            # Option 1: enregistrer la clé host (sécuritaire)
+            ssh-keyscan -H "${{ secrets.VM_HOST }}" >> ~/.ssh/known_hosts
+            chmod 644 ~/.ssh/known_hosts
 
       - name: Sync repo to VM home (~) over SSH
         env:
